[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/main/Main.gd" type="Script" id=3]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=12]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 12 )
rewarded_id = "ca-app-pub-3940256099942544/5224354917"
rewarded_interstitial_id = "ca-app-pub-3940256099942544/5354046379"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 15.0
margin_right = 446.0
margin_bottom = 885.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 442.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
text = "Android Pending Intent Issue on SDK v31+"
align = 1

[node name="ShareButton" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 442.0
margin_bottom = 99.0
rect_min_size = Vector2( 45, 50 )
size_flags_horizontal = 3
text = "Share"

[node name="WatchAdButton" type="Button" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 442.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 45 )
disabled = true
text = "Watch ads"
icon_align = 2

[node name="OutputLabel" type="Label" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 442.0
margin_bottom = 197.0
rect_min_size = Vector2( 0, 45 )
align = 1

[connection signal="rewarded" from="AdMob" to="." method="_on_AdMob_rewarded"]
[connection signal="rewarded_interstitial_closed" from="AdMob" to="." method="_on_AdMob_rewarded_interstitial_closed"]
[connection signal="rewarded_interstitial_failed_to_load" from="AdMob" to="." method="_on_AdMob_rewarded_interstitial_failed_to_load"]
[connection signal="rewarded_interstitial_failed_to_show" from="AdMob" to="." method="_on_AdMob_rewarded_interstitial_failed_to_show"]
[connection signal="rewarded_interstitial_loaded" from="AdMob" to="." method="_on_AdMob_rewarded_interstitial_loaded"]
[connection signal="rewarded_interstitial_opened" from="AdMob" to="." method="_on_AdMob_rewarded_interstitial_opened"]
[connection signal="rewarded_video_closed" from="AdMob" to="." method="_on_AdMob_rewarded_video_closed"]
[connection signal="rewarded_video_failed_to_load" from="AdMob" to="." method="_on_AdMob_rewarded_video_failed_to_load"]
[connection signal="rewarded_video_loaded" from="AdMob" to="." method="_on_AdMob_rewarded_video_loaded"]
[connection signal="rewarded_video_opened" from="AdMob" to="." method="_on_AdMob_rewarded_video_opened"]
[connection signal="pressed" from="VBoxContainer/ShareButton" to="." method="_on_ShareButton_pressed"]
[connection signal="pressed" from="VBoxContainer/WatchAdButton" to="." method="_on_WatchAdButton_pressed"]
